# c-interop

./: .gitignore  .readthedocs.yaml  CMakeLists.txt  LICENSE.txt  README.md  cinterop.pc.in
.github/workflows/: python-cinterop.yml
bindings/R/pkgs/cinterop/: DESCRIPTION  NAMESPACE  README.md
bindings/R/pkgs/cinterop/R/: 00class-definitions.r  cinterop-package.r  time-series.r  wrapping.r
bindings/R/pkgs/cinterop/debian/: README.Debian  README.source  changelog  control  copyright  r-cinterop.lintian-overrides  rules  source.lintian-overrides
bindings/R/pkgs/cinterop/man/: ExternalObjRef-class.Rd  RegularTimeSeries-class.Rd  RegularTimeSeriesGeometry-class.Rd  argErrorExternalObjType.Rd  asInteropRegularTimeSeries.Rd  asXtsTimeSeries.Rd  cinterop-package.Rd  getExternalXptr.Rd  getTsGeometry.Rd  isExternalObjRef.Rd  isInteropRegularTimeSeries.Rd  makeMonthlyTimeAxis.Rd  makeTimeAxis.Rd  mkExternalObjRef.Rd  strExternalObjRef.Rd  updatePathWindows.Rd
bindings/R/pkgs/cinterop/tests/: testthat.r
bindings/R/pkgs/cinterop/tests/testthat/: test_timeseries.r
bindings/matlab/: NativeHandle.m  SimpleNativeHandle.m
bindings/python/cinterop/: .pyproject.toml  LICENSE.txt  README.md  mkdocs.yml  mypy.ini  pyproject.toml  requirements.txt  setup.py
bindings/python/cinterop/cinterop/: __init__.py  _version.py  native.py  timeseries.py
bindings/python/cinterop/cinterop/cffi/: marshal.py
bindings/python/cinterop/docs/: cffi-marshal-module.md  code-reference.md  environment.yml  index.md  requirements.txt  tech_notes.md  timeseries-module.md
bindings/python/cinterop/docs/uml/: cinterop-principles.wsd
bindings/python/cinterop/tests/: Readme.md  requirements.txt  test_native_handle.py  test_timeseries.py
bindings/python/cinterop/tests/test_native_library/: CMakeLists.txt  funcs_cdef.h  structs_cdef.h  test_native_library.cpp  test_native_library.h
bindings/python/cinteroppyb11/: README.md  setup.py
bindings/python/cinteroppyb11/docs/: Makefile  conf.py  index.rst  make.bat  pycinterop.md  python_example.rst
bindings/python/cinteroppyb11/src/: cinteroppyb11.def  cinteroppyb11.sln  cinteroppyb11.vcxproj  cinteroppyb11.vcxproj.filters  main.cpp
bindings/python/cinteroppyb11/tests/: test.py
debian/: README.source  changelog  control  copyright  libcinterop-dev.install  libcinterop-dev.lintian-overrides  source.lintian-overrides
doc/: debian-packaging.md
include/cinterop/: c_boost_posix_time_interop.hpp  c_cpp_interop.hpp  c_interop_forward_decl.h  common_c_interop.h  object_lifetimes.hpp  pybind11_timeseries_interop.hpp  rcpp_interop.h  rcpp_interop.hpp  rcpp_strict_r_headers.hpp  rcpp_timeseries_interop.hpp  timeseries_c_interop.h  timeseries_interop.hpp
src/: c_cpp_interop.cpp  c_cpp_interop.h  c_cpp_interop.hpp  c_interop_forward_decl.h  common_c_interop.h  rcpp_interop.cpp  rcpp_interop.h
